[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/scripts/buildings/source.gd" type="Script" id=1]
[ext_resource path="res://src/scripts/buildings/slot.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 68.5488, 67.1985 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 0.0919781, 0.514603 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 0.10289, 0.517579 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 0.10289, 0.418687 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 0.102889, 0.517579 )

[node name="Source" type="Area2D"]
position = Vector2( 447.879, 190.115 )
script = ExtResource( 1 )

[node name="SourceSprite" type="Sprite" parent="."]
position = Vector2( 2.2869, 4.90939 )
scale = Vector2( 1.9081, 1.90516 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 4.63297, 3.70633 )
shape = SubResource( 1 )

[node name="Slots" type="Node2D" parent="."]

[node name="Slot1" type="Area2D" parent="Slots"]
editor/display_folded = true
position = Vector2( -27.879, 39.885 )
rotation = 3.14159
scale = Vector2( 194.383, 38.6414 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slots/Slot1"]
shape = SubResource( 2 )

[node name="Slot2" type="Area2D" parent="Slots"]
editor/display_folded = true
position = Vector2( 32.121, 39.885 )
rotation = 3.14159
scale = Vector2( 194.383, 38.6414 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slots/Slot2"]
position = Vector2( -2.38419e-007, 0 )
shape = SubResource( 3 )

[node name="Slot3" type="Area2D" parent="Slots"]
editor/display_folded = true
position = Vector2( 32.121, -30.115 )
rotation = 3.14159
scale = Vector2( 194.383, 38.6414 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slots/Slot3"]
position = Vector2( -2.38419e-007, 4.76837e-007 )
shape = SubResource( 4 )

[node name="Slot4" type="Area2D" parent="Slots"]
editor/display_folded = true
position = Vector2( -27.879, -30.115 )
rotation = 3.14159
scale = Vector2( 194.383, 38.6414 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slots/Slot4"]
shape = SubResource( 5 )
[connection signal="body_entered" from="." to="." method="_on_Task_body_entered"]
